package models

type Dto struct {
	ID           string
	UserID       string
	StorageUntil string
	OrderPrice   string
	Weight       string
	PackageType  string
}
